WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116406
Hoist several chunks of code at the top of RenderLayer::paintLayerContents() onto new functions
https://bugs.webkit.org/show_bug.cgi?id=116406
Summary
Hoist several chunks of code at the top of RenderLayer::paintLayerContents() ...
Simon Fraser (smfr)
Reported
2013-05-18 17:58:31 PDT
Hoist several chunks of code at the top of RenderLayer::paintLayerContents() onto new functions
Attachments
Patch
(23.08 KB, patch)
2013-05-18 18:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(23.08 KB, patch)
2013-05-18 18:36 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(23.11 KB, patch)
2013-05-18 18:45 PDT
,
Simon Fraser (smfr)
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-05-18 18:04:30 PDT
Created
attachment 202224
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-18 18:06:29 PDT
Attachment 202224
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/FilterEffectRenderer.cpp', u'Source/WebCore/rendering/FilterEffectRenderer.h', u'Source/WebCore/rendering/RenderLayer.cpp', u'Source/WebCore/rendering/RenderLayer.h']" exit_code: 1 Source/WebCore/ChangeLog:12: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:14: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Source/WebCore/ChangeLog:15: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
EFL EWS Bot
Comment 3
2013-05-18 18:08:27 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/494832
Early Warning System Bot
Comment 4
2013-05-18 18:09:20 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/493800
EFL EWS Bot
Comment 5
2013-05-18 18:09:56 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/494833
Early Warning System Bot
Comment 6
2013-05-18 18:11:48 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/497538
kov's GTK+ EWS bot
Comment 7
2013-05-18 18:20:21 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/493804
Build Bot
Comment 8
2013-05-18 18:31:39 PDT
Comment on
attachment 202224
[details]
Patch
Attachment 202224
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/486941
Simon Fraser (smfr)
Comment 9
2013-05-18 18:36:05 PDT
Created
attachment 202225
[details]
Patch
Early Warning System Bot
Comment 10
2013-05-18 18:41:33 PDT
Comment on
attachment 202225
[details]
Patch
Attachment 202225
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/493810
Early Warning System Bot
Comment 11
2013-05-18 18:41:41 PDT
Comment on
attachment 202225
[details]
Patch
Attachment 202225
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/490871
Simon Fraser (smfr)
Comment 12
2013-05-18 18:45:28 PDT
Created
attachment 202226
[details]
Patch
Andreas Kling
Comment 13
2013-05-18 18:48:01 PDT
Comment on
attachment 202226
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202226&action=review
r=me.
> Source/WebCore/rendering/RenderLayer.cpp:3691 > +bool RenderLayer::setupFontSubpixelQuantization(GraphicsContext* context, bool &didQuantizeFonts)
& placement.
> Source/WebCore/rendering/RenderLayer.cpp:3725 > + if (!style) > + return false;
This could be an assertion instead; 'style' won't be null if the renderer has a clip path.
> Source/WebCore/rendering/RenderLayer.h:939 > + bool setupFontSubpixelQuantization(GraphicsContext*, bool &didQuantizeFonts);
& placement.
Simon Fraser (smfr)
Comment 14
2013-05-19 19:26:58 PDT
http://trac.webkit.org/changeset/150349
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug